@startuml CookSync_Class_Diagram

title Diagrama de Clases - Sistema CookSync

' ===== CONFIGURACIÓN =====
!define PRIMARY_KEY <b><color:red>PK</color></b>
!define FOREIGN_KEY <b><color:blue>FK</color></b>

' ===== CLASES DE USUARIO Y AUTENTICACIÓN =====
class User {
  PRIMARY_KEY id: int
  email: string
  passwordHash: string
  FOREIGN_KEY rolId: int
  FOREIGN_KEY tipoDocumentoId: int
  numeroDocumento: string
  nombres: string
  apellidos: string
  telefono: string
  fechaNacimiento: Date
  genero: Gender
  fotoPerfil: string
  emailVerificado: boolean
  telefonoVerificado: boolean
  tokenVerificacion: string
  tokenRecuperacion: string
  fechaTokenExpira: DateTime
  intentosLogin: int
  bloqueadoHasta: DateTime
  aceptaTerminos: boolean
  aceptaMarketing: boolean
  esActivo: boolean
  ultimoAcceso: DateTime
  ipUltimoAcceso: string
  createdAt: DateTime
  updatedAt: DateTime
  --
  +login(email: string, password: string): boolean
  +register(userData: UserData): User
  +updateProfile(data: ProfileData): boolean
  +changePassword(oldPassword: string, newPassword: string): boolean
  +resetPassword(token: string, newPassword: string): boolean
}

class Role {
  PRIMARY_KEY id: int
  codigo: string
  nombre: string
  descripcion: string
  permisos: string
  esActivo: boolean
  createdAt: DateTime
  --
  +hasPermission(permission: string): boolean
  +getPermissions(): string[]
}

class DocumentType {
  PRIMARY_KEY id: int
  codigo: string
  nombre: string
  longitudMinima: int
  longitudMaxima: int
  patronValidacion: string
  esActivo: boolean
  createdAt: DateTime
  --
  +validate(document: string): boolean
}

class Client {
  PRIMARY_KEY id: int
  FOREIGN_KEY usuarioId: int
  FOREIGN_KEY planClienteId: int
  fechaRegistro: Date
  fechaInicioPlan: Date
  fechaFinPlan: Date
  preferenciasNotificacion: string
  limiteCredito: decimal
  creditoUsado: decimal
  puntosFidelidad: int
  nivelCliente: ClientLevel
  descuentoPersonalizado: decimal
  notasInternas: string
  createdAt: DateTime
  updatedAt: DateTime
  --
  +upgradePlan(newPlan: ClientPlan): boolean
  +addPoints(points: int): void
  +useCredit(amount: decimal): boolean
  +getAvailableCredit(): decimal
}

class ClientPlan {
  PRIMARY_KEY id: int
  codigo: string
  nombre: string
  descripcion: string
  precioMensual: decimal
  precioAnual: decimal
  incluyeRecetas: boolean
  limiteIngredientes: int
  limiteRecetasFavoritas: int
  funcionalidades: string
  esActivo: boolean
  ordenMostrar: int
  createdAt: DateTime
  updatedAt: DateTime
  --
  +isFeatureEnabled(feature: string): boolean
  +getMonthlyPrice(): decimal
  +getAnnualPrice(): decimal
}

' ===== CLASES DE RECETAS =====
class Recipe {
  PRIMARY_KEY id: int
  nombre: string
  descripcion: string
  FOREIGN_KEY categoriaRecetaId: int
  FOREIGN_KEY dificultadId: int
  tiempoPreparacion: int
  tiempoCoccion: int
  tiempoTotal: int
  porciones: int
  caloriasAproximadas: int
  costoAproximado: decimal
  instrucciones: string
  imagenPrincipal: string
  imagenesPasos: string
  videoUrl: string
  tipsCocina: string
  origenPais: string
  regionOrigen: string
  temporada: RecipeSeason
  ocasion: string
  esVegetariana: boolean
  esVegana: boolean
  sinGluten: boolean
  sinLactosa: boolean
  esSaludable: boolean
  esTradicional: boolean
  popularidad: int
  vecesPreparada: int
  vecesFavorita: int
  calificacionPromedio: decimal
  totalCalificaciones: int
  FOREIGN_KEY autorId: int
  esVerificada: boolean
  fechaVerificacion: DateTime
  esDestacada: boolean
  esActivo: boolean
  createdAt: DateTime
  updatedAt: DateTime
  --
  +calculateTotalTime(): int
  +addToFavorites(userId: int): boolean
  +removeFromFavorites(userId: int): boolean
  +rate(userId: int, rating: int): boolean
  +getAverageRating(): decimal
  +incrementViewCount(): void
  +getIngredientsList(): RecipeIngredient[]
  +getInstructions(): string[]
  +calculateMatchPercentage(availableIngredients: int[]): decimal
  +getRecommendationScore(): decimal
}

class RecipeCategory {
  PRIMARY_KEY id: int
  nombre: string
  descripcion: string
  icono: string
  color: string
  imagenCategoria: string
  ordenMostrar: int
  esActivo: boolean
  createdAt: DateTime
  --
  +getRecipes(): Recipe[]
  +getRecipeCount(): int
}

class RecipeDifficulty {
  PRIMARY_KEY id: int
  nivel: string
  descripcion: string
  orden: int
  color: string
  icono: string
  --
  +getRecipes(): Recipe[]
  +getDifficultyLevel(): int
}

class RecipeIngredient {
  PRIMARY_KEY id: int
  FOREIGN_KEY recetaId: int
  FOREIGN_KEY ingredienteMaestroId: int
  cantidad: decimal
  FOREIGN_KEY unidadMedidaId: int
  esOpcional: boolean
  esPrincipal: boolean
  notas: string
  ordenAparicion: int
  grupoIngrediente: string
  costoAproximado: decimal
  createdAt: DateTime
  --
  +getFormattedAmount(): string
  +calculateCost(): decimal
  +isAvailableInPantry(userId: int): boolean
}

' ===== CLASES DE INGREDIENTES =====
class MasterIngredient {
  PRIMARY_KEY id: int
  nombre: string
  nombreAlternativo: string
  nombresRegionales: string
  FOREIGN_KEY categoriaProductoId: int
  FOREIGN_KEY unidadMedidaBaseId: int
  caloriasPor100g: decimal
  proteinasPor100g: decimal
  carbohidratosPor100g: decimal
  grasasPor100g: decimal
  fibraPor100g: decimal
  descripcion: string
  imagenUrl: string
  esPerecedero: boolean
  tiempoVidaDias: int
  temperaturaAlmacenamiento: StorageTemperature
  esBasico: boolean
  esCondimento: boolean
  esEspecia: boolean
  origenPais: string
  temporadaDisponible: string
  sustitutos: string
  alergenos: string
  beneficiosSalud: string
  vecesUsado: int
  esActivo: boolean
  createdAt: DateTime
  updatedAt: DateTime
  --
  +getNutritionalInfo(): NutritionalInfo
  +getSubstitutes(): MasterIngredient[]
  +isInSeason(): boolean
  +getStorageInstructions(): string
  +incrementUsageCount(): void
}

class MeasurementUnit {
  PRIMARY_KEY id: int
  codigo: string
  nombre: string
  abreviatura: string
  tipo: MeasurementType
  factorConversionBase: decimal
  esActivo: boolean
  createdAt: DateTime
  --
  +convertTo(amount: decimal, targetUnit: MeasurementUnit): decimal
  +getConversionFactor(): decimal
}

' ===== CLASES DE DESPENSA =====
class UserPantry {
  PRIMARY_KEY id: int
  FOREIGN_KEY usuarioId: int
  FOREIGN_KEY ingredienteMaestroId: int
  cantidad: decimal
  FOREIGN_KEY unidadMedidaId: int
  fechaVencimiento: Date
  fechaCompra: Date
  notas: string
  esActivo: boolean
  createdAt: DateTime
  updatedAt: DateTime
  --
  +isExpired(): boolean
  +getDaysUntilExpiration(): int
  +updateQuantity(newQuantity: decimal): boolean
  +consume(amount: decimal): boolean
  +getFormattedAmount(): string
}

' ===== CLASES DE FAVORITOS =====
class UserFavoriteRecipe {
  PRIMARY_KEY id: int
  FOREIGN_KEY usuarioId: int
  FOREIGN_KEY recetaId: int
  createdAt: DateTime
  --
  +remove(): boolean
}

' ===== CLASES DE PRODUCTOS =====
class Product {
  PRIMARY_KEY id: int
  nombre: string
  descripcion: string
  precio: decimal
  stock: int
  FOREIGN_KEY categoriaId: int
  imagenUrl: string
  sku: string
  atributos: Json
  esActivo: boolean
  createdAt: DateTime
  updatedAt: DateTime
  --
  +updateStock(quantity: int): boolean
  +isInStock(): boolean
  +getPrice(): decimal
  +updatePrice(newPrice: decimal): boolean
}

class ProductCategory {
  PRIMARY_KEY id: int
  nombre: string
  descripcion: string
  esActivo: boolean
  createdAt: DateTime
  updatedAt: DateTime
  --
  +getProducts(): Product[]
  +getProductCount(): int
}

' ===== CLASES DE SERVICIOS =====
class AuthService {
  +login(email: string, password: string): AuthResult
  +register(userData: RegisterData): User
  +validateToken(token: string): boolean
  +generateJWT(user: User): string
  +refreshToken(refreshToken: string): string
  +logout(token: string): boolean
  +resetPassword(email: string): boolean
}

class RecipeService {
  +getAllRecipes(filters: RecipeFilters): Recipe[]
  +getRecipeById(id: int): Recipe
  +searchByIngredients(ingredientIds: int[]): Recipe[]
  +searchByIngredientsWithFilters(ingredientIds: int[], filters: RecipeFilters): Recipe[]
  +getIntelligentRecommendations(userId: int, limit: int): Recipe[]
  +getSimilarRecipes(recipeId: int, limit: int): Recipe[]
  +createRecipe(recipeData: CreateRecipeData): Recipe
  +updateRecipe(id: int, recipeData: UpdateRecipeData): Recipe
  +deleteRecipe(id: int): boolean
  +calculateRecommendationScore(recipe: Recipe): decimal
}

class FavoritesService {
  +addToFavorites(userId: int, recipeId: int): boolean
  +removeFromFavorites(userId: int, recipeId: int): boolean
  +getUserFavorites(userId: int): Recipe[]
  +isFavorite(userId: int, recipeId: int): boolean
}

class PantryService {
  +getUserPantry(userId: int): UserPantry[]
  +addIngredient(userId: int, ingredientData: PantryIngredientData): UserPantry
  +updateIngredient(pantryId: int, data: UpdatePantryData): UserPantry
  +removeIngredient(pantryId: int): boolean
  +getExpiringIngredients(userId: int, days: int): UserPantry[]
  +checkAvailability(userId: int, ingredientIds: int[]): AvailabilityResult[]
}

class AdminService {
  +getAllUsers(pagination: Pagination): User[]
  +getUserStats(): UserStats
  +toggleUserStatus(userId: int): boolean
  +changeUserRole(userId: int, roleId: int): boolean
  +getSystemStats(): SystemStats
  +getAllRecipes(pagination: Pagination): Recipe[]
  +toggleRecipeStatus(recipeId: int): boolean
  +getAuditLogs(filters: AuditFilters): AuditLog[]
}

' ===== ENUMS =====
enum Gender {
  M
  F
  O
}

enum ClientLevel {
  BRONCE
  PLATA
  ORO
  PLATINO
}

enum MeasurementType {
  PESO
  VOLUMEN
  LONGITUD
  UNIDAD
  TIEMPO
}

enum StorageTemperature {
  AMBIENTE
  REFRIGERADO
  CONGELADO
}

enum RecipeSeason {
  VERANO
  OTONO
  INVIERNO
  PRIMAVERA
  TODO_ANO
}

' ===== RELACIONES =====

' Usuario y Roles
User ||--|| Role : "tiene"
User ||--|| DocumentType : "usa"
User ||--o{ Client : "puede ser"

' Cliente y Plan
Client ||--|| ClientPlan : "tiene"

' Usuario y Despensa
User ||--o{ UserPantry : "gestiona"
UserPantry }|--|| MasterIngredient : "contiene"
UserPantry }|--|| MeasurementUnit : "usa unidad"

' Usuario y Favoritos
User ||--o{ UserFavoriteRecipe : "tiene favoritos"
UserFavoriteRecipe }|--|| Recipe : "referencia"

' Recetas y Categorías
Recipe }|--|| RecipeCategory : "pertenece a"
Recipe }|--|| RecipeDifficulty : "tiene dificultad"

' Recetas e Ingredientes
Recipe ||--o{ RecipeIngredient : "contiene"
RecipeIngredient }|--|| MasterIngredient : "usa"
RecipeIngredient }|--|| MeasurementUnit : "mide en"

' Ingredientes y Unidades
MasterIngredient }|--|| MeasurementUnit : "unidad base"

' Productos
Product }|--|| ProductCategory : "pertenece a"
Product ||--o| Recipe : "puede tener receta"

' Servicios y Entidades
AuthService ..> User : "gestiona"
RecipeService ..> Recipe : "gestiona"
RecipeService ..> RecipeIngredient : "gestiona"
FavoritesService ..> UserFavoriteRecipe : "gestiona"
PantryService ..> UserPantry : "gestiona"
AdminService ..> User : "administra"
AdminService ..> Recipe : "administra"

' ===== NOTAS =====
note top of Recipe
  **Algoritmo de Recomendaciones:**
  - Calificación promedio (30%)
  - Popularidad (25%)
  - Veces favorita (20%)
  - Recetas destacadas (15%)
  - Recetas verificadas (10%)
  - Bonus tiempo/salud
end note

note top of RecipeService
  **Funcionalidades Avanzadas:**
  - Búsqueda por ingredientes
  - Filtros combinados
  - Recomendaciones inteligentes
  - Cálculo de coincidencias
  - Scoring automático
end note

note top of UserPantry
  **Gestión de Despensa:**
  - Control de vencimientos
  - Notificaciones automáticas
  - Integración con búsqueda
  - Gestión de cantidades
end note

note bottom of AuthService
  **Seguridad Implementada:**
  - JWT Authentication
  - Role-based Access Control
  - Rate limiting
  - Password hashing
  - Token refresh
end note

@enduml
